--- a/substrabac/requirements.txt
+++ b/substrabac/requirements.txt
@@ -12,7 +12,7 @@ parso==0.2.0
 pexpect==4.5.0
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
-psycopg2==2.7.4
+psycopg2-binary==2.7.4
 ptyprocess==0.5.2
 Pygments==2.2.0
 pytz==2018.4
